--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown: kramdown
 title:       "University of Leicester ReSET Service"
 keywords:    "University, Leicester, research, software, engineer"
 description: "A page to host the UoL ReSET service's onine presence"
-source_link: "https://github.com/UOLreset/UOLreset.github.io"
+source_link: "https://github.com/t413/SinglePaged"
 favicon:     #put a path like: "img/favicon.ico"
 touch_icon:  #put a path like: "img/apple-touch-icon.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
