--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ colors:
   purple:    '#c869bf'
   orange:    '#fab125'
   turquoise: '#0fbfcf'
-  red:       '#b92034'
+  red:       '#9a2230'
 
 kramdown:
   auto_ids:  false
